completed active states for desktop

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <a class="btn btn-nav" href="#features">Features</a>
           <a class="btn btn-nav" href="#pricing">Pricing</a>
           <a class="btn btn-nav" href="#contact">Contact</a>
-          <a class="btn btn-red" href="#login">Login</a>
+          <a class="btn btn-red btn-cta" href="#login">Login</a>
         </nav>
       </div>
     </div>
@@ -228,9 +228,9 @@
         <p>35,000+ already joined</p>
         <h2 class="section__title section__title--white">Stay up-to-date with what we’re doing</h2>
         
-        <form class="contact-us__form" action="" method="post">
+        <form class="contact-us__form" action="#">
           <input type="email" name="email" placeholder="Enter your email address">
-          <button type="submit" class="btn btn-red">Contact Us</button>
+          <button class="btn btn-red btn-cta" type="submit">Contact Us</button>
         </form>
         
       </div>
@@ -249,8 +249,8 @@
           <a href="#contact">Contact</a>
         </div>
         <div class="site-footer__socials">
-          <a href="#"><img src="./images/icon-facebook.svg" alt="facebook icon"></a>
-          <a href="#"><img src="./images/icon-twitter.svg" alt="twitter icon"></a>
+          <a href="https://www.facebook.com/" target="_blank"><img src="./images/icon-facebook.svg" alt="facebook icon"></a>
+          <a href="https://twitter.com/" target="_blank"><img src="./images/icon-twitter.svg" alt="twitter icon"></a>
         </div>
       </div>
     </div>
